--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(untitled
         copia.c
+        shell.c
         X2_UlloaDeLaCalle.c
-        X22_UlloaDeLaCalle.c
         X2_UlloaDeLaCalleVERSION2.c
 )
